feat(2fa): Add endpoints for time-based 2FA
